<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startgamesession"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startgamesession"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/black"
        >

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:backgroundTint="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="98"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:id="@+id/startgametitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"
            android:text="Start game session with NAME"
            />
        <TextView
            android:id="@+id/numcoupons1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:text="coupons written by curuser: _" />
        <TextView
            android:id="@+id/numcoupons2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:text="coupons written by selectedfriend: _" />

        <TextView
            android:id="@+id/zerowarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/insufficient_coupons"
            android:textColor="@color/couponifyred"
            android:visibility="gone"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/oddwarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sum_of_coupons_must_be_odd"
            android:textColor="@color/couponifyred"
            android:visibility="gone"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/startgamebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittextdesc"
            android:backgroundTint="@color/couponifyred"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@color/black">

        <ImageButton
            android:id="@+id/addfriendsbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:src="@drawable/baseline_person_add_alt_1_24" />

        <ImageButton
            android:id="@+id/friendslistbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:src="@drawable/outline_local_activity_24_pressed" />

        <ImageButton
            android:id="@+id/inspirationtabbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:src="@drawable/baseline_reviews_24" />
    </LinearLayout>

</LinearLayout>